@@ -887,9 +887,9 @@ coap_new_error_response(coap_pdu_t *request, unsigned char code,
 #if COAP_ERROR_PHRASE_LENGTH > 0
   char *phrase = coap_response_phrase(code);
 
-  /* Need some more space for the error phrase */
+  /* Need some more space for the error phrase and payload start marker */
   if (phrase)
-    size += strlen(phrase);
+    size += strlen(phrase) + 1;
 #endif
 
   assert(request);
@@ -980,11 +980,11 @@ wellknown_response(coap_context_t *context, coap_pdu_t *request) {
   /* Manually set payload of response to let print_wellknown() write,
    * into our buffer without copying data. */
 
-  len = resp->max_size - resp->length - 1;
   resp->data = (unsigned char *)resp->hdr + resp->length;
   *resp->data = COAP_PAYLOAD_START;
   resp->data++;
-  resp->length--;
+  resp->length++;
+  len = resp->max_size - resp->length;
 
   if (!print_wellknown(context, resp->data, &len,
 	       coap_check_option(request, COAP_OPTION_URI_QUERY, &opt_iter))) {
